[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scenes/ui/ability_unlock_ui.gd" id="1_script"]

; ============================================================
; Ability Unlock UI â€” shrine interaction interface
; ============================================================
[node name="AbilityUnlockUI" type="CanvasLayer"]
layer = 20
script = ExtResource("1_script")

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="PanelContainer" parent="CenterContainer"]
layout_mode = 2
custom_minimum_size = Vector2(500, 400)

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/Panel"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="Header" type="HBoxContainer" parent="CenterContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="CenterContainer/Panel/MarginContainer/VBoxContainer/Header"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "Ability Shrine"

[node name="CoinLabel" type="Label" parent="CenterContainer/Panel/MarginContainer/VBoxContainer/Header"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
theme_override_colors/font_color = Color(1.0, 0.84, 0.0, 1.0)
text = "Tuna Coins: 2"

[node name="HSeparator" type="HSeparator" parent="CenterContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="AbilityGrid" type="GridContainer" parent="CenterContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
columns = 3
theme_override_constants/h_separation = 16
theme_override_constants/v_separation = 8

[node name="CloseButton" type="Button" parent="CenterContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Close"
